newclay/test/Compiler/Resolver/Fail/SwitchStatementExprBindingOnlyInSwitchStatement1/main.clay
main() {
    switch (var x = 1; x) case (1) {
        x;
    }
    x;
}
